--- a/Addons/Forms/View/default/Forms/edit.html
+++ b/Addons/Forms/View/default/Forms/edit.html
@@ -128,10 +128,10 @@
           </table>
         </div>
       </div>      
-      <div class="controls" style="display:none">
+<!--       <div class="controls" style="display:none">
         <label class="item-label"> 详细介绍<span class="check-tips">为空默认只显示描述</span> </label>
         <textarea name="content" style="width:405px; height:100px;">{$data.content}</textarea>
-        {:hook('adminArticleEdit', array('name'=>'content','value'=>$data[content]))} </div>
+        {:hook('adminArticleEdit', array('name'=>'content','value'=>$data[content]))} </div> -->
     </div>
     <div class="form-item form_bh">
       <input type="hidden" name="id" value="{$data.id}">
