1. 首页面显示项调整； 2. 美丽妈妈插件安装卸载sql补充； 3. 发布FTP；

--- a/Application/Home/View/default/Public/footer.html
+++ b/Application/Home/View/default/Public/footer.html
@@ -1,5 +1,5 @@
 <div class="wrap bottom" style="background:#fff; border-top:#ddd;">
-    <p class="copyright">本系统由<a href="http://weiphp.cn" target="_blank">WeiPHP</a>强力驱动</p>
+    <p class="copyright">&copy;2018 自豪的使用WeiPHP开源框架</p>
 </div>
 
 <include file="Public/var"/>
