--- a/Application/Home/View/default/Public/header.html
+++ b/Application/Home/View/default/Public/header.html
@@ -56,7 +56,7 @@
                             <ul class="dropdown-menu" style="display:none">
                                <if condition="$mid==C('USER_ADMINISTRATOR')"><li><a href="{:U ('Admin/Index/Index')}" target="_blank">后台管理</a></li></if>
                             	<li><a href="{:U ('Home/Public/lists')}">公众号列表</a></li>
-                                <li><a href="{:U ('Home/Public/add')}">账号配置</a></li>
+                                <!-- <li><a href="{:U ('Home/Public/add')}">账号配置</a></li> -->
                                 <li><a href="{:U('User/profile')}">修改密码</a></li>
                                 <li><a href="{:U('User/logout')}">退出</a></li>
                             </ul>
