1. 列表页模板去掉“查看配置教程”；2. 美丽妈妈插件微信端使用auth2.0授权登录；

--- a/Application/Home/View/default/Addons/_nav.html
+++ b/Application/Home/View/default/Addons/_nav.html
@@ -11,7 +11,7 @@
   }
   $url = 'http://help.weiphp.cn/index.php?s=/Home/Help/index/page/' . strtolower($page);
   </php>
-  <span class="fr" style="margin:10px;"><a target="_blank" href="{$url}"><b style="font-size:16px;" class="fa fa-question-circle"></b>查看配置教程</a></span>
+ <!--  <span class="fr" style="margin:10px;"><a target="_blank" href="{$url}"><b style="font-size:16px;" class="fa fa-question-circle"></b>查看配置教程</a></span> -->
 </ul>
 <if condition="!empty($sub_nav)">
 <div class="sub-tab-nav">
