--- a/Addons/Suggestions/View/default/Suggestions/suggest.html
+++ b/Addons/Suggestions/View/default/Suggestions/suggest.html
@@ -1,3 +1,4 @@
+<php>$page_title='意见与建议';</php>
 <!-- 头部 -->
 <include file="Public/mobile_head"/>	
 <link rel="stylesheet" type="text/css" href="{:ADDON_PUBLIC_PATH}/suggest.css" media="all">
