--- a/Addons/BeautyMom/View/default/User/m_edit.html
+++ b/Addons/BeautyMom/View/default/User/m_edit.html
@@ -36,6 +36,9 @@
     .weui-select {
         direction: rtl;
     }
+    .required {
+        color: red;
+    }
     </style>
 </head>
 
@@ -49,7 +52,7 @@
         <div class="weui-cells">
             <div class="weui-cell">
                 <div class="weui-cell__hd">
-                    <label class="weui-label">姓名</label>
+                    <label class="weui-label"><span class="required">*</span> 姓名</label>
                 </div>
                 <div class="weui-cell__bd">
                     <input class="weui-input" type="text" placeholder="请输入姓名" id="truename" name="truename" value="{$info.truename}">
@@ -57,7 +60,7 @@
             </div>
             <div class="weui-cell">
                 <div class="weui-cell__hd">
-                    <label class="weui-label">手机号</label>
+                    <label class="weui-label"><span class="required">*</span> 手机号</label>
                 </div>
                 <div class="weui-cell__bd">
                     <input class="weui-input" type="text" placeholder="请输入手机号" id="mobile" name="mobile" value="{$info.mobile}">
