--- a/Addons/WeiSite/View/default/TemplateDetail/V2/detail.html
+++ b/Addons/WeiSite/View/default/TemplateDetail/V2/detail.html
@@ -1,3 +1,4 @@
+<php>$page_title='';</php>
 <include file="Public/mobile_head"/>	
 <link href="{:CUSTOM_TEMPLATE_PATH}Detail/V2/detail.css?v={:SITE_VERSION}" rel="stylesheet" type="text/css">
 <body id="weisite">
@@ -6,7 +7,7 @@
     	<h6 class="title">{$info.title}</h6>
         <p class="info"><span class="colorless">{$info.cTime|time_format}</span></p>
         <section class="content">
-                <notempty name="info.cover"><p><img src="{$info.cover|get_cover_url}"/></p></notempty>
+                <!-- <notempty name="info.cover"><p><img src="{$info.cover|get_cover_url}"/></p></notempty> -->
                 {$info.content|htmlspecialchars_decode}
         </section>
     </div>
