--- a/Addons/WeiSite/View/default/TemplateDetail/V4/detail.html
+++ b/Addons/WeiSite/View/default/TemplateDetail/V4/detail.html
@@ -1,3 +1,4 @@
+<php>$page_title='';</php>
 <include file="Public/mobile_head"/>	
 <link href="{:CUSTOM_TEMPLATE_PATH}Detail/V4/detail.css?v={:SITE_VERSION}" rel="stylesheet" type="text/css">
 <if condition="$info[id] eq 82">
@@ -13,7 +14,7 @@ body{ background:#010e1f url(__STATIC__/football/bg1.jpg) no-repeat center botto
 	<div class="detail top_line">
     	<h6 class="title">{$info.title}</h6>
         <section class="content">
-                <notempty name="info.cover"><p><img src="{$info.cover|get_cover_url}"/></p></notempty>
+                <!-- <notempty name="info.cover"><p><img src="{$info.cover|get_cover_url}"/></p></notempty> -->
                 {$info.content|htmlspecialchars_decode}
         </section>
         <a class="detail_back_btn" href="javascript:;" onClick="window.history.back()">返回</a>
