--- a/Application/Home/View/default/Material/news_detail.html
+++ b/Application/Home/View/default/Material/news_detail.html
@@ -5,7 +5,7 @@
     	<h6 class="appmsg_title">{$info.title}</h6>
         <p class="appmsg_info"><span class="time">{$info.cTime|day_format}</span> <span class="author">{$info.author}</span></p>
         <section class="appmsg_content">
-                <notempty name="info[cover_id]"><p><img src="{$info.cover_id|get_cover_url}"/></p></notempty>
+<!--                 <notempty name="info[cover_id]"><p><img src="{$info.cover_id|get_cover_url}"/></p></notempty> -->
                 {$info.content|htmlspecialchars_decode}
         </section>
         <notempty name="info[link]">
