--- a/Application/Home/View/default/Public/mobile_head.html
+++ b/Application/Home/View/default/Public/mobile_head.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-    <title><php>echo empty($page_title) ? C('WEB_SITE_TITLE') : $page_title;</php></title>
+    <!-- <title><php>echo empty($page_title) ? C('WEB_SITE_TITLE') : $page_title;</php></title> -->
+    <title><php>echo empty($page_title) ? '' : $page_title;</php></title>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 	<meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
     <meta content="application/xhtml+xml;charset=UTF-8" http-equiv="Content-Type">
