--- a/Addons/BeautyMom/View/default/User/detail.html
+++ b/Addons/BeautyMom/View/default/User/detail.html
@@ -1,59 +1,60 @@
-<extend name="Base/common" />
-<block name="body">
-  <div class="span9 page_message">
-    <section id="contents"> <include file="Addons/_nav" />
-      <div class="tab-content"> 
-        <!-- 表单 -->
-        <form id="form" class="form-horizontal">
-          <ul id="tab" class="tab-pane in">
-      		    <li class="form-item cf">
-            		<div class="controls uploadrow2" rel="picurl">
-                        <div class="upload-img-box" rel="img">
-                            <div class="upload-pre-item2"><img width="100" height="100" src="{$info.headimgurl}"/></div>
-                        </div>
-                  </div>
-              </li>
-        	    <li class="form-item cf">
-                <label class="item-label">昵称：{$info.nickname}</label>
-              </li>  
-              <li class="form-item cf">
-                <label class="item-label">姓名：{$info.truename}</label>
-              </li>
-              <li class="form-item cf">
-                <label class="item-label">性别：{$info.sex_name}</label>
-              </li> 
-              <li class="form-item cf">
-                <label class="item-label">手机号：{$info.mobile}</label>
-              </li>
-              <li class="form-item cf">
-                <label class="item-label">生日：{$info.birthday|day_format}</label>
-              </li>
-              <li class="form-item cf">
-                <label class="item-label">宝宝生日：{$info.baby_birthday|day_format}</label>
-              </li>
-              <li class="form-item cf">
-                <php>$info['is_second_baby'] = $info['is_second_baby'] == '1' ? '是' : '否'</php>
-                <label class="item-label">是否二胎：{$info.is_second_baby}</label>
-              </li>
-              <li class="form-item cf">
-                <label class="item-label">职业：{$info.profession}</label>
-              </li>
-              <li class="form-item cf">
-                <label class="item-label">住址：{$info.address}</label>
-              </li>
+<!DOCTYPE HTML>
+<html>
 
-              <li class="form-item cf">
-                <label class="item-label">积分：{$info.credit_num}</label>
-              </li> 
-              <li class="form-item cf">
-                <label class="item-label">充值卡金额：{$info.ecard_num}</label>
-              </li>
-              
-              <li>
-              	<a href="javascript:history.go(-1);" class="btn">返回</a>
-              </li>
-          </ul>
-       </form>
-    </section>
-  </div>
-</block>
+<head>
+    <include file="Public/head" />
+
+    <body style="background:#fff">
+        <div class="span9 page_message">
+            <section id="contents">
+                <div class="tab-content">
+                    <!-- 表单 -->
+                    <form id="form" class="form-horizontal">
+                        <ul id="tab" class="tab-pane in">
+                            <li class="form-item cf">
+                                <div class="controls uploadrow2" rel="picurl">
+                                    <div class="upload-img-box" rel="img">
+                                        <div class="upload-pre-item2"><img width="100" height="100" src="{$info.headimgurl}" /></div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="form-item cf">
+                                <label class="item-label">昵称：{$info.nickname}</label>
+                            </li>
+                            <li class="form-item cf">
+                                <label class="item-label">姓名：{$info.truename}</label>
+                            </li>
+                            <li class="form-item cf">
+                                <label class="item-label">性别：{$info.sex_name}</label>
+                            </li>
+                            <li class="form-item cf">
+                                <label class="item-label">手机号：{$info.mobile}</label>
+                            </li>
+                            <li class="form-item cf">
+                                <label class="item-label">生日：{$info.birthday|day_format}</label>
+                            </li>
+                            <li class="form-item cf">
+                                <label class="item-label">宝宝生日：{$info.baby_birthday|day_format}</label>
+                            </li>
+                            <li class="form-item cf">
+                                <php>$info['is_second_baby'] = $info['is_second_baby'] == '1' ? '是' : '否'</php>
+                                <label class="item-label">是否二胎：{$info.is_second_baby}</label>
+                            </li>
+                            <li class="form-item cf">
+                                <label class="item-label">职业：{$info.profession}</label>
+                            </li>
+                            <li class="form-item cf">
+                                <label class="item-label">住址：{$info.address}</label>
+                            </li>
+                            <li class="form-item cf">
+                                <label class="item-label">积分：{$info.credit_num}</label>
+                            </li>
+                            <li class="form-item cf">
+                                <label class="item-label">充值卡金额：{$info.ecard_num}</label>
+                            </li>
+                        </ul>
+                    </form>
+            </section>
+        </div>
+    </body>
+</html>
