--- a/Addons/BeautyMom/View/default/Product/m_lists.html
+++ b/Addons/BeautyMom/View/default/Product/m_lists.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-touch-fullscreen" content="yes">
     <meta name="format-detection" content="telephone=no, email=no">
-    <title>产品列表</title>
+    <title>项目列表</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
     <link rel="stylesheet" href="https://cdn.bootcss.com/weui/1.1.2/style/weui.min.css">
