--- a/Addons/WeiSite/View/default/TemplateIndex/ColorV4/main.css
+++ b/Addons/WeiSite/View/default/TemplateIndex/ColorV4/main.css
@@ -14,5 +14,5 @@ border-radius: 6px;margin-left: 5px;width: 12px;height: 12px;background: #fff;}
 .icon_lists{ text-align:center; margin:20px 0}
 .icon_lists .item{ width:33.3%; float:left; margin-bottom:5px; color:#333}
 .icon_lists .item .icon{ border-radius:25px; width:80%; height:auto; display:block; margin:0 auto 10px;}
-.icon_lists .item img{ width:100%; height:auto;border-radius:25px;}
+.icon_lists .item img{ width:50px; height:50px;}
 .icon_lists .item:active,.icon_lists .item:hover{ background:#eee}
