feat: 微信端表单提交成功后，自动关闭当前页回到聊天窗口；

--- a/Addons/BeautyMom/View/default/ProjectExp/m_lists.html
+++ b/Addons/BeautyMom/View/default/ProjectExp/m_lists.html
@@ -55,7 +55,7 @@
                         </div>
                         <div class="weui-panel__ft">
                             <div class="weui-cell weui-cell_link">
-                                <a href="{$url}" class="weui-cell__bd">查看更多</a>
+                                <a href="{$url}" class="weui-cell__bd">查看详情</a>
                                 <if condition="$vo['userExped']">
                                     <span class="weui-cell__ft"><a href="javascript:;" class="weui-btn weui-btn_mini weui-btn_primary weui-btn_warn J_SubmitBtn" data-projectid="{$vo.id}">取消预约</a></span>
                                     <else/>
