--- a/Addons/BeautyMom/View/default/User/detail.html
+++ b/Addons/BeautyMom/View/default/User/detail.html
@@ -40,9 +40,9 @@
                                 <php>$info['is_second_baby'] = $info['is_second_baby'] == '1' ? '是' : '否'</php>
                                 <label class="item-label">是否二胎：{$info.is_second_baby}</label>
                             </li>
-                            <li class="form-item cf">
+<!--                             <li class="form-item cf">
                                 <label class="item-label">职业：{$info.profession}</label>
-                            </li>
+                            </li> -->
                             <li class="form-item cf">
                                 <label class="item-label">住址：{$info.address}</label>
                             </li>
