--- a/Addons/BeautyMom/View/default/User/edit.html
+++ b/Addons/BeautyMom/View/default/User/edit.html
@@ -34,12 +34,12 @@
                             <input type="datetime" name="baby_birthday" class="text time" value="{$data.baby_birthday|day_format}" placeholder="请选择时间" />
                         </div>
                     </div>
-                    <div class="form-item cf">
+<!--                     <div class="form-item cf">
                         <label class="item-label"><span class="need_flag">*</span>职业<span class="check-tips"></span></label>
                         <div class="controls">
                             <input type="text" class="text input-large" name="profession" value="{$data.profession}">
                         </div>
-                    </div>
+                    </div> -->
                     <div class="form-item cf">
                         <label class="item-label"><span class="need_flag"></span>住址<span class="check-tips"></span></label>
                         <div class="controls">
