--- a/Addons/BeautyMom/View/default/User/m_detail.html
+++ b/Addons/BeautyMom/View/default/User/m_detail.html
@@ -132,12 +132,12 @@
                 <php>$info['is_second_baby'] = $info['is_second_baby'] == '1' ? '是' : '否'</php>
                 <div class="weui-cell__ft">{$info.is_second_baby}</div>
             </div>
-            <div class="weui-cell">
+<!--             <div class="weui-cell">
                 <div class="weui-cell__bd">
                     <p>职业</p>
                 </div>
                 <div class="weui-cell__ft">{$info.profession|default='待补充'}</div>
-            </div>
+            </div> -->
             <div class="weui-cell">
                 <div class="weui-cell__bd">
                     <p>住址</p>
