--- a/Addons/BeautyMom/View/default/User/m_regist.html
+++ b/Addons/BeautyMom/View/default/User/m_regist.html
@@ -1,49 +1,34 @@
-<!DOCTYPE html>
-<html>
+<php>$page_title = '填写个人信息';</php>
+<include file="Public/mobile_head_weui" />
+<style>
+.header {
+    text-align: center;
+}
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-touch-fullscreen" content="yes">
-    <meta name="format-detection" content="telephone=no, email=no">
-    <title>填写个人信息</title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <link rel="stylesheet" href="https://cdn.bootcss.com/weui/1.1.2/style/weui.min.css">
-    <link rel="stylesheet" href="https://cdn.bootcss.com/jquery-weui/1.2.0/css/jquery-weui.min.css">
-    <link rel="stylesheet" type="text/css" href="__CSS__/public.css?v={:SITE_VERSION}" media="all">
-    <style>
-    .header {
-        text-align: center;
-    }
+.avatar {
+    width: 100px;
+    height: 100px;
+    border-radius: 100px;
+    margin: 20px auto 10px;
+    display: block;
+}
 
-    .avatar {
-        width: 100px;
-        height: 100px;
-        border-radius: 100px;
-        margin: 20px auto 10px;
-        display: block;
-    }
+.nickname {
+    color: red;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
 
-    .nickname {
-        color: red;
-        font-weight: bold;
-        margin-bottom: 20px;
-    }
+.weui-btn {
+    width: 80%;
+    border-radius: 25px;
+    margin-top: 30px;
+}
 
-    .weui-btn {
-        width: 80%;
-        border-radius: 25px;
-        margin-top: 30px;
-    }
-
-    .weui-select {
-        direction: rtl;
-    }
-    </style>
-</head>
+.weui-select {
+    direction: rtl;
+}
+</style>
 
 <body>
     <div class="header">
@@ -102,7 +87,8 @@ $(function() {
         doAjaxSubmit($('#form'), function(obj) {
             console.log(obj);
             if (obj.status == 1) {
-                $.toast("修改成功");
+                $.toast("欢迎您加入美丽妈妈");
+                wx.closeWindow();
             } else {
                 $.toast("修改失败", "forbidden");
             }
