--- a/Addons/UserCenter/View/default/UserCenter/lists.html
+++ b/Addons/UserCenter/View/default/UserCenter/lists.html
@@ -56,7 +56,7 @@
                   <td>
                   <a href="{:addons_url('UserCenter://UserCenter/detail',array('uid'=>$vo[uid]))}" target="_self">详细资料</a> 
                   <!--<a href="{:addons_url('UserCenter://UserCenter/edit',array('uid'=>$vo[uid]))}" target="_self">编辑</a>-->
-                  <a href="{:U('Home/CreditData/lists',array('uid'=>$vo[uid]))}" target="_self">积分记录</a>
+                  <!-- <a href="{:U('Home/CreditData/lists',array('uid'=>$vo[uid]))}" target="_self">积分记录</a> -->
                   <a href="javascript:void(0);" class="set_remark" rel="{$vo.uid}">备注</a>
                   
                   </td>
