fix: 美丽妈妈优化；

--- a/Application/Home/View/default/User/login.html
+++ b/Application/Home/View/default/User/login.html
@@ -20,7 +20,7 @@
             	<section class="login_box">
                   <form class="login-form" action="__SELF__" method="post">
                           <div class="form_body" id="input_login" style="display:<php>if(C('SCAN_LOGIN')) echo 'none';</php> ">
-                                <h6>欢迎使用WeiPHP!</h6>
+                                <h6>欢迎使用微平台</h6>
                                 <div class="input_panel">
                                   <div class="control-group">
                                     <label class="control-label" for="inputEmail">用户名</label>
