--- a/Addons/BeautyMom/View/default/ProjectExp/m_detail.html
+++ b/Addons/BeautyMom/View/default/ProjectExp/m_detail.html
@@ -63,8 +63,13 @@
         <section class="content">
             {$info.content|htmlspecialchars_decode}
         </section>
-        <a href="javascript:;" id="J_SubmitBtn" onclick="applyExp({$info.id}, 1)" class="weui-btn weui-btn_primary">立即预约</a>
-        <a href="javascript:;" id="J_CancleBtn" onclick="applyExp({$info.id}, 0)" class="weui-btn weui-btn_warn">取消预约</a>
+        <if condition="($isOverExp eq 1) AND ($userExped eq '0')">
+            <a href="javascript:;" id="J_CancleBtn" style="display: block;" class="weui-btn weui-btn_warn">预约已满</a>
+        <else />
+            <a href="javascript:;" id="J_SubmitBtn" onclick="applyExp({$info.id}, 1)" class="weui-btn weui-btn_primary">立即预约</a>
+            <a href="javascript:;" id="J_CancleBtn" onclick="applyExp({$info.id}, 0)" class="weui-btn weui-btn_warn">取消预约</a>
+        </if>
+
     </div>
 </body>
 <script src="https://cdn.bootcss.com/jquery/1.11.0/jquery.min.js"></script>
