--- a/Addons/BeautyMom/View/default/ProjectExp/m_lists.html
+++ b/Addons/BeautyMom/View/default/ProjectExp/m_lists.html
@@ -67,11 +67,13 @@
                         <div class="weui-panel__ft">
                             <div class="weui-cell weui-cell_link">
                                 <a href="{$url}" class="weui-cell__bd">查看详情</a>
-                                <if condition="$vo['userExped']">
-                                    <span class="weui-cell__ft"><a href="javascript:;" class="weui-btn weui-btn_mini weui-btn_primary weui-btn_warn J_SubmitBtn" data-projectid="{$vo.id}">取消预约</a></span>
-                                    <else/>
-                                    <span class="weui-cell__ft"><a href="javascript:;" class="weui-btn weui-btn_mini weui-btn_primary J_SubmitBtn" data-projectid="{$vo.id}">立即预约</a></span>
-                                </if>
+                                    <if condition="$vo['userExped']">
+                                        <span class="weui-cell__ft"><a href="javascript:;" class="weui-btn weui-btn_mini weui-btn_primary weui-btn_warn J_SubmitBtn" data-projectid="{$vo.id}">取消预约</a></span>
+                                    <elseif  condition="($vo['userExped'] eq '0') AND ($vo['isOverExp'] eq 1)" />
+                                        <span class="weui-cell__ft"><a href="javascript:;" class="weui-btn weui-btn_mini weui-btn_primary weui-btn_warn">预约已满</a></span>
+                                    <else />
+                                        <span class="weui-cell__ft"><a href="javascript:;" class="weui-btn weui-btn_mini weui-btn_primary J_SubmitBtn" data-projectid="{$vo.id}">立即预约</a></span>
+                                    </if>
                             </div>
                         </div>
                     </div>
