--- a/Addons/WeiSite/View/default/TemplateDetail/V1/detail.html
+++ b/Addons/WeiSite/View/default/TemplateDetail/V1/detail.html
@@ -1,11 +1,14 @@
-<php>$page_title='';</php>
+<php>$page_title=$info['title'];</php>
 <include file="Public/mobile_head"/>	
 <link href="{:CUSTOM_TEMPLATE_PATH}Detail/V1/detail.css?v={:SITE_VERSION}" rel="stylesheet" type="text/css">
+<style type="text/css">
+body{ background-color: #FFF;}
+</style>
 <body id="weisite">
 <div class="container">
 	<div class="detail top_line">
-    	<h6 class="title">{$info.title}</h6>
-        <p class="info"><span class="colorless">{$info.cTime|time_format}</span></p>
+    	<!-- <h6 class="title">{$info.title}</h6> -->
+        <!-- <p class="info"><span class="colorless">{$info.cTime|time_format}</span></p> -->
         <section class="content">
                 <!-- <notempty name="info.cover"><p><img src="{$info.cover|get_cover_url}"/></p></notempty> -->
                 {$info.content|htmlspecialchars_decode}
